--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
             <div id="topRight">
                 <div id="logo">
                     <span><a href="#"><img src="images/xkcd.png"/ alt="xkcd.com logo" height="83" width="185"></a></span>
-                    <span id="slogan">A webcomic of romance,<br> sarcasm, math, and language.</span>
+                    <span id="slogan">comix related to algorithms, life and everything</span>
                 </div>
                 <div>
-                    xkcd updates every Monday, Wednesday, and Friday.
+                	updates every friday
                 </div>
             </div>
             <div id="bgLeft" class="bg box"></div>
